--- a/src/syslinux.cfg
+++ b/src/syslinux.cfg
@@ -5,7 +5,7 @@ timeout 50
 label Unraid OS
   menu default
   kernel /bzimage
-  append isolcpus=2-7,10-15 pcie_acs_override=downstream,multifunction initrd=/bzroot
+  append isolcpus=2-7,10-15 modprobe.blacklist=i2c_i801,i2c_smbus pcie_acs_override=downstream,multifunction initrd=/bzroot
 label Unraid OS GUI Mode
   kernel /bzimage
   append isolcpus=2-7,10-15 pcie_acs_override=downstream,multifunction initrd=/bzroot,/bzroot-gui
